install-guide.md and index.md translation

--- a/de_mkdocs.yml
+++ b/de_mkdocs.yml
@@ -3,6 +3,7 @@ theme: null
 theme_dir: tpldcrdocs/
 site_url: https://docs.decred.org
 repo_url: https://github.com/decred/dcrdocs
+docs_dir: de_docs/
 markdown_extensions:
   - footnotes
   - fontawesome_markdown
