--- a/de_mkdocs.yml
+++ b/de_mkdocs.yml
@@ -26,7 +26,7 @@ pages:
     - 'Paymetheus benutzen': 'getting-started/user-guides/using-paymetheus.md'
   - Command-Line:
     - 'OS Unterschiede': 'getting-started/cli-differences.md'
-    - 'Startup Basics': 'getting-started/startup-basics.md'
+    - 'Start Grundlagen': 'getting-started/startup-basics.md'
     - 'dcrd Setup': 'getting-started/user-guides/dcrd-setup.md'
     - 'dcrwallet Setup': 'getting-started/user-guides/dcrwallet-setup.md'
     - 'dcrctl Basics': 'getting-started/user-guides/dcrctl-basics.md'
