--- a/de_mkdocs.yml
+++ b/de_mkdocs.yml
@@ -28,7 +28,7 @@ pages:
     - 'OS Unterschiede': 'getting-started/cli-differences.md'
     - 'Start Grundlagen': 'getting-started/startup-basics.md'
     - 'dcrd Einrichten': 'getting-started/user-guides/dcrd-setup.md'
-    - 'dcrwallet Setup': 'getting-started/user-guides/dcrwallet-setup.md'
+    - 'dcrwallet Einrichten': 'getting-started/user-guides/dcrwallet-setup.md'
     - 'dcrctl Basics': 'getting-started/user-guides/dcrctl-basics.md'
   - 'Web Wallet': 'getting-started/user-guides/web.md'
   - 'Obtaining DCR': 'getting-started/obtaining-dcr.md'
